# llmlib

./: .gitignore  LICENSE  README.md  pyproject.toml  test_gpt2.py
llmlib/activations/: __init__.py  gelu.py
llmlib/attention/: self_attention.py
llmlib/models/: gpt2.py  llama2.py  template.py
llmlib/normalization/: __init__.py  layernorm.py  rmsnorm.py
