[tool.poetry]
name = "llmlib"
version = "0.0.1"
description = "experimental equinox/jax-based lib for LLMs."
authors = ["fizzAI <fizzarolli@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.28"
equinox = "^0.11.4"
jaxtyping = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
